# akon

./: .dockerignore  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .yamllint.yml  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: build.yml
docs/: exousia-integration.md  implementation-plan.md
profiles/kernels/: cachyos.yml  fedora-default.yml  gentoo-kernel.yml  longterm.yml  mainline.yml  next.yml  stable.yml
profiles/modules/: zfs.yml
tests/: conftest.py  test_build_kernel.py  test_build_module.py  test_constants.py  test_container.py  test_profiles.py  test_publish.py
tools/: build_kernel.py  build_module.py  constants.py  container.py  generate_readme.py  profiles.py  publish.py
